[gd_scene load_steps=7 format=3 uid="uid://brhl8kkmkf8im"]

[ext_resource type="Script" path="res://Scenes/Character/Character.gd" id="1_vxr42"]
[ext_resource type="Script" path="res://Scenes/Character/Path.gd" id="2_c5abm"]
[ext_resource type="Texture2D" uid="uid://eblhwolmn460" path="res://Assets/Texture/TX Player.png" id="3_8l7rs"]
[ext_resource type="Script" path="res://Scenes/Character/clickable_area.gd" id="4_3qx2k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1gm32"]
atlas = ExtResource("3_8l7rs")
region = Rect2(4.58546, 12.3783, 23.1067, 46.777)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cd2p"]
size = Vector2(20, 46)

[node name="Character" type="Node2D"]
script = ExtResource("1_vxr42")

[node name="Path" type="Node2D" parent="."]
script = ExtResource("2_c5abm")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1gm32")

[node name="clickableArea" type="Area2D" parent="Sprite"]
script = ExtResource("4_3qx2k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/clickableArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_1cd2p")

[node name="CharacterCamera" type="Camera2D" parent="."]
scale = Vector2(4, 2)
enabled = false
zoom = Vector2(5, 5)
limit_left = 0
limit_top = -32
limit_right = 256
limit_bottom = 256
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="VisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.535651, 0.520002)

[connection signal="turn_complete" from="." to="Path" method="_on_character_unit_still"]
[connection signal="unit_moving" from="." to="Path" method="_on_character_unit_moving"]
[connection signal="unit_still" from="." to="Path" method="_on_character_unit_still"]
[connection signal="area_clicked" from="Sprite/clickableArea" to="." method="_on_area_clicked"]
